Fix double scrollbar bug

--- a/src/App.sass
+++ b/src/App.sass
@@ -1,7 +1,3 @@
-html,
-body
-  overflow-x: hidden
-
 .app
   display: flex
   flex-direction: column
